--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,15 @@
                 android:resource="@xml/filepaths"/>
         </provider>
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="fingerrate"
+                    android:host="itforone"
+              />
+
+            </intent-filter>
         </activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
