--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "kr.co.itforone.fingerrate"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 15
-        versionName "2.3"
+        versionCode 16
+        versionName "2.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -46,7 +46,7 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'com.jakewharton:butterknife:10.1.0'
     implementation 'org.jsoup:jsoup:1.13.1'
-    implementation 'com.github.mike14u:croperino:1.1.8'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     // (Java only)
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.work:work-gcm:$work_version"
