--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "kr.co.itforone.fingerrate"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 17
-        versionName "2.5"
+        versionCode 19
+        versionName "2.7"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -35,9 +35,10 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.android.installreferrer:installreferrer:2.1'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
