--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,12 @@ android {
 }
 
 dependencies {
+
     def work_version = "2.4.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation 'androidx.ads:ads-identifier:1.0.0-alpha01'
+
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -57,4 +61,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 }
