--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 08 11:05:08 KST 2020
-sdk.dir=C\:\\android_sdk
+#Tue Dec 08 16:20:31 KST 2020
+sdk.dir=D\:\\Users\\Kevin\\AppData\\Local\\Android\\Sdk
